src/app/features/pokemon/components/PokemonCard/PokemonCard.css
.pokemon-card {
  background-color: var(--color-bg-default);
  border-top-right-radius: var(--radius-xl);
  border-top-left-radius: var(--radius-xl);
  position: relative;
  padding-top: 85px;

  display: flex;
  flex-direction: column;
  align-items: center;

  padding-inline: 9%;
  min-height: calc(100vh - 172px);
}

.pokemon-card-image {
  position: absolute;
  top: -85px;
  left: calc(50% - 85px);
  width: 170px;
  height: 170px;
}

.pokemon-card-description {
  padding-top: 47px;
  padding-bottom: 34px;
}

.pokemon-card-tabs-container {
  width: 100%;
  max-width: 700px;
}

@media (max-width: 1200px) {
  .pokemon-card {
    padding-top: 60px;
  }

  .pokemon-card-image {
    top: -60px;
    left: calc(50% - 30px);
    width: 120px;
    height: 120px;
  }
}

@media (max-width: 640px) {
  .pokemon-card {
    padding-top: 50px;
  }

  .pokemon-card-image {
    top: -50px;
    left: calc(50% - 50px);
    width: 100px;
    height: 100px;
  }
}

